# zkryptium

./: BBS_DEVICE.md  Cargo.toml
examples/: bbsplus.rs  bbsplus_blind.rs
src/: errors.rs  lib.rs
src/bbsplus/: bbs_device.rs  bbs_proof_device.rs  blind.rs  commitment.rs  generators.rs  keys.rs  mod.rs  proof.rs  signature.rs
src/keys/: pair.rs
src/schemes/: algorithms.rs  generics.rs
src/utils/: message.rs  util.rs
