[package]
name = "zkryptium"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
authors = ["LINKS Foundation"]
description = "Rust crypto library for zero-knowledge proofs"
repository = "https://github.com/Cybersecurity-LINKS/zkryptium"
rust-version = "1.65"
keywords = ["crypto", "signatures", "zero-knowledge", "bbs", "blind-signature"]
categories = ["cryptography", "authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.25", default-features = false, features = [
  "derive",
  "serde_derive",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0.30", optional = true }

# cl03
rug = { version = "1.19.2", features = ["serde"], optional = true }


sha2 = { version = "0.10.6", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
digest = { version = "0.10.6", default-features = false }

# bbsplus
bls12_381_plus = { version = "0.8.13", optional = true, features = [
  "groups",
  "pairings",
], default-features = false }
ff = { version = "0.13.0", default-features = false }
group = { version = "0.10", default-features = false }
elliptic-curve = { version = "0.13.4", default-features = false }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.59"
cargo-license = "0.5.1"
log = "0.4.0"
env_logger = "0.10.0"
dotenv = "0.15.0"


[lib]
name = "zkryptium"
path = "src/lib.rs"
features = ["cl03"]

[features]
default = ["bbsplus"]
cl03 = ["dep:rug"]
bbsplus = ["dep:bls12_381_plus"]


[[example]]
name = "bbsplus_blind"
path = "examples/bbsplus_blind.rs"
features = ["bbsplus"]

[[example]]
name = "bbsplus"
path = "examples/bbsplus.rs"
features = ["bbsplus"]

[[example]]
name = "cl03"
path = "examples/cl03.rs"
features = ["cl03"]
